@@ -1,4 +1,8 @@
-	GET	Hdr:<APCS>.Common
+	GBLS	Test
+Test	SETS	"GET	Hdr:<APCS>.Common"
+	; Environement variables after variable expansion need to be expanded
+	; as well.
+	$Test
 
 	[ HAVE_SEEN_APCS32
 	; Ok, test succeeded
@@ -11,8 +15,10 @@
 	AREA	Data, DATA
 	[ :LNOT:REFERENCE
 	=	"xxx<APCS>zzz"
+	=	"$Test"
 	|
 	=	"xxx<APCS>zzz"
+	=	"GET	Hdr:" :CC: :CHR:60 :CC: "APCS" :CC: :CHR:62 :CC: ".Common"
 	]
 	ALIGN
 
